User Preferences-> install from File freezes Blender #46056

Closed
opened 2015-09-09 10:26:58 +02:00 by mic lack30 · 9 comments

Windows7 x64, 2*GTX680

Blender 2.75.4 946b850 (Build from today from https://builder.blender.org/download/)

Blender freezes when going into the User Preferences and you browse a directory, when installing an addon via Install from File

Go to "UserPreferences"
Go to "Addons"
Click "Install from File"
Click a directory/file and blender will freeze

Windows7 x64, 2*GTX680 Blender 2.75.4 946b850 (Build from today from https://builder.blender.org/download/) Blender freezes when going into the User Preferences and you browse a directory, when installing an addon via Install from File Go to "UserPreferences" Go to "Addons" Click "Install from File" Click a directory/file and blender will freeze
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @michaellackner

Added subscriber: @michaellackner

Added subscriber: @sebastian_k

Added subscriber: @sebastian_k

Confirmed on OSX 10.10.5, 2.76.4, 7fab7b6. Blender starts "Listing Dirs" but nothing happens, then it freezes.

Confirmed on OSX 10.10.5, 2.76.4, 7fab7b6. Blender starts "Listing Dirs" but nothing happens, then it freezes.
Author

Have to correct the build number. It's actually 7fab7b6. That's the one from today. Above one is from yesterday's build, but both don't work, so it doesn't really matter. ;)

Have to correct the build number. It's actually 7fab7b6. That's the one from today. Above one is from yesterday's build, but both don't work, so it doesn't really matter. ;)

Added subscriber: @mont29

Added subscriber: @mont29
Bastien Montagne self-assigned this 2015-09-09 10:34:13 +02:00

eeeek! can confirm, even on linux :(

eeeek! can confirm, even on linux :(

This issue was referenced by ad86d6ebdc

This issue was referenced by ad86d6ebdca4e36cfd34e5bec5d5b69197a426c6

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#46056
No description provided.