Fix T46056: User Preferences-> install from File freezes Blender.

Own stupid error in recent fix for buffer overflow in `BLI_testextensie_glob()`...
Also found & fixed another potential buffer overflow in this func.